# learn_servant

./: .gitignore  CHANGELOG.md  README.md  sirius-test.cabal  spell_check.sh
app/: Main.hs  SiriusChecker.hs  YandexSpeller.hs
